[package]
name = "terminal-prompt"
description = "Tiny library for prompting sensitive or unsensitive data on the terminal"
authors = ["Maarten de Vries <maarten@de-vri.es>"]
repository = "https://github.com/de-vri-es/terminal-prompt-rs"
docs = "https://docs.rs/terminal-prompt"
version = "0.1.0"
edition = "2021"

[target.'cfg(unix)'.dependencies]
libc = "0.2.147"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["consoleapi"] }
